--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.0",
+    "react": "^16.0.0-alpha.6",
+    "react-native": "^0.44.0",
     "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.4",
+    "react-redux": "^5.0.5",
     "react-tween-state": "^0.1.5",
-    "realm": "^1.3.0",
+    "realm": "^1.3.1",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "1.9.2",
-    "jest": "20.0.3",
-    "react-test-renderer": "16.0.0-alpha.6",
+    "babel-jest": "^20.0.3",
+    "babel-preset-react-native": "^1.9.2",
+    "jest": "^20.0.3",
+    "react-test-renderer": "^16.0.0-alpha.6",
+    "redux-logger": "^3.0.6",
     "rnpm-plugin-upgrade": "^0.26.0"
   },
   "jest": {
